
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 float noise2 (float,float) ;

float simplex2(
    float x, float y,
    int octaves, float persistence, float lacunarity)
{
    float freq = 1.0f;
    float amp = 1.0f;
    float max = 1.0f;
    float total = noise2(x, y);
    int i;
    for (i = 1; i < octaves; i++) {
        freq *= lacunarity;
        amp *= persistence;
        max += amp;
        total += noise2(x * freq, y * freq) * amp;
    }
    return (1 + total / max) / 2;
}
